--- a/analyses/upstream-analysis/02_run_scDblFinder.Rmd
+++ b/analyses/upstream-analysis/02_run_scDblFinder.Rmd
@@ -143,7 +143,7 @@ suppressPackageStartupMessages({
   library(tidyverse)
   library(grid)
   library(knitr)
-
+  
   # Evaluate ggrepel
   options(ggrepel.max.overlaps = Inf, repr.plot.width=12, repr.plot.height=8)
   
@@ -212,10 +212,11 @@ We will load the raw seurat object as generated in the `01A_run_signac_qc.Rmd` s
 
 Next, the `scDblFinder function` is used to identify cells that are doublets based on cluster-based generation of artificial doublets. We will save the cells that need to be filtered based on scDblFinder analysis in a separate table.
 
-```{r run-recoverDoublets-plot-predictions, fig.width = 15, fig.height = 4, fig.fullwidth = TRUE, echo=TRUE}
+```{r run-recoverDoublets-plot-predictions, fig.width = 10, fig.height = 4, fig.fullwidth = TRUE, echo=TRUE}
 # Create metrics per sample
 doublets_metrics <- data.frame(matrix(ncol = 4, nrow = 1))
 colnames(doublets_metrics) <- c("sample_name", "singlet", "doublet", "doublets_pct_library") # provide column names
+
 
 # Create list for seurat and sce
 sce_obj_list <- list()
@@ -226,7 +227,6 @@ for (i in seq_along(sample_name)) {
   
   ###############################################################
   cat("Reading in data for sample", sample_name[i], "\n")
-  
   sce_obj_list[i] <- readRDS(seurat_results_file[i])
   print(sce_obj_list)
   
@@ -240,15 +240,21 @@ for (i in seq_along(sample_name)) {
     RunUMAP(reduction = "lsi", dims = 2:30)
 
   sce_obj_list[[i]] <- as.SingleCellExperiment(sce_obj_list[[i]])
+  
   ###############################################################
   cat("Beginning to run scDblFinder for sample", sample_name[i], "\n")
-  
-  # Run scDblFinder
+  # ------------------------------------------------------------------------------
+  # Step 1: Run scDblFinder
   bp <- BiocParallel::MulticoreParam(4, RNGseed=1234)
   BiocParallel::bpstart(bp)
   
   set.seed(1234) # Make this reproducible 
-  sce_obj_list[[i]] <- scDblFinder(sce_obj_list[[i]], clusters = TRUE, BPPARAM = bp)
+  
+  # Step 1: Applying the scDblFinder method
+  # https://plger.github.io/scDblFinder/articles/scATAC.html
+  # https://www.bioconductor.org/packages/devel/bioc/vignettes/scDblFinder/inst/doc/scATAC.html
+  # https://f1000research.com/articles/10-979/v2
+  sce_obj_list[[i]] <- scDblFinder(sce_obj_list[[i]], artificialDoublets=1, aggregateFeatures=TRUE, nfeatures=25, processing="normFeatures", BPPARAM = bp)
   BiocParallel::bpstop(bp)
   
   # Estimate singlets and doublets in the library
@@ -299,15 +305,14 @@ for (i in seq_along(sample_name)) {
   # merge all three plots within one grid (and visualize this)
   fname_png <- paste0(scDblFinder_plots_dir, "/", sample_name[i], "_Doublets_prediction.png")
   print(fname_png)
-  gridExtra::grid.arrange(plot1 <- plotUMAP(sce_obj_list[[i]], colour_by = "scDblFinder.cluster", point_size = 0.1) + ggtitle("scDblFinder clusters"),
-                          plot2 <- plotUMAP(sce_obj_list[[i]], colour_by = "scDblFinder.score", point_size = 0.1) + ggtitle("Doublets score"),
-                          plot3 <- plotUMAP(sce_obj_list[[i]], colour_by = "scDblFinder.class", point_size = 0.1) + ggtitle("Doublets prediction"),
+  gridExtra::grid.arrange(plot1 <- plotUMAP(sce_obj_list[[i]], colour_by = "scDblFinder.score", point_size = 0.1) + ggtitle("Doublets score"),
+                          plot2 <- plotUMAP(sce_obj_list[[i]], colour_by = "scDblFinder.class", point_size = 0.1) + ggtitle("Doublets prediction"),
                           ncol = 3, nrow = 1, top = paste0(sample_name[i], "_Doublets_prediction"), padding = unit(1.5, "line"))
    
-  g <- gridExtra::arrangeGrob(plot1, plot2, plot3, ncol = 3, nrow = 1,
+  g <- gridExtra::arrangeGrob(plot1, plot2, ncol = 2, nrow = 1,
                               top = paste0(sample_name[i], "_Doublets_prediction"),
                               padding = unit(1.5, "line")) #generates g
-  ggsave(file = fname_png, g, width = 15, height = 4, device = "png")
+  ggsave(file = fname_png, g, width = 10, height = 4, device = "png")
   #######################################################################################
   # Save results for all libraries for cells to be filtered out
   if(i == 1){
