--- a/analyses/cluster-cell-calling/03-find-peaks.Rmd
+++ b/analyses/cluster-cell-calling/03-find-peaks.Rmd
@@ -182,10 +182,6 @@ results_dir <- file.path(module_results_dir, "03_find_peaks")
 if (!dir.exists(results_dir)) {
   dir.create(results_dir)}
 
-coverage_results_dir <- file.path(results_dir, "coverage_results") 
-if (!dir.exists(coverage_results_dir)) {
-  dir.create(coverage_results_dir)}
-
 # Create plots directory
 plots_dir <- file.path(module_plots_dir, "03_find_peaks") 
 if (!dir.exists(plots_dir)) {
@@ -340,7 +336,7 @@ clusters <- levels(seurat_obj)
 # Clean feature names before loop
 fc_df_combined$feature <- sub("\\.\\.\\..*$", "", fc_df_combined$feature)
 
-export_cluster_peak_plots(seurat_obj = seurat_obj, fc_df_combined = fc_df_combined, top_n = top_n_value_peaks, min.cutoff_value = min.cutoff_value, plots_dir = coverage_plots_dir, results_dir = coverage_results_dir, clustering_column = use_res_col)
+export_cluster_peak_plots(seurat_obj = seurat_obj, fc_df_combined = fc_df_combined, top_n = top_n_value_peaks, min.cutoff_value = min.cutoff_value, plots_dir = coverage_plots_dir, clustering_column = use_res_col)
 ``` 
 
 # Peak coordinates
