--- a/analyses/cluster-cell-calling/01-cluster-cell-calling.Rmd
+++ b/analyses/cluster-cell-calling/01-cluster-cell-calling.Rmd
@@ -214,12 +214,18 @@ seurat_obj <- readRDS(data_file)
 
 # Cluster the cells
 
-Seurat applies a graph-based clustering approach, building upon initial strategies in [Macosko et al., 2015](https://www.cell.com/fulltext/S0092-8674(15)00549-8). Importantly, the distance metric which drives the clustering analysis (based on previously identified PCs) remains the same. However, our approach to partitioning the cellular distance matrix into clusters has dramatically improved. Our approach was heavily inspired by recent manuscripts which applied graph-based clustering approaches to scRNA-seq data [SNN-Cliq, Xu and Su, Bioinformatics, 2015](https://academic.oup.com/bioinformatics/article/31/12/1974/214505) and CyTOF data [PhenoGraph, Levine et al., Cell, 2015](https://pubmed.ncbi.nlm.nih.gov/26095251/). Briefly, these methods embed cells in a graph structure - for example a K-nearest neighbor (KNN) graph, with edges drawn between cells with similar feature expression patterns, and then attempt to partition this graph into highly interconnected ‘quasi-cliques’ or ‘communities’.
+In scATAC-seq analysis with Signac, clustering is performed using a graph-based approach, following the construction of a low-dimensional representation of the data via Latent Semantic Indexing (LSI). This method captures patterns in chromatin accessibility by performing singular value decomposition (SVD) on a term frequency–inverse document frequency (TF-IDF) matrix derived from peak-by-cell accessibility counts.
 
-As in PhenoGraph, we first construct a KNN graph based on the euclidean distance in PCA space, and refine the edge weights between any two cells based on the shared overlap in their local neighborhoods (Jaccard similarity). This step is performed using the FindNeighbors() function, and takes as input the previously defined dimensionality of the dataset (first 10 PCs).
+Seurat (via Signac) then applies a shared nearest neighbor (SNN) graph-based clustering approach, similar to strategies used in single-cell transcriptomics [Macosko et al., 2015](https://www.cell.com/fulltext/S0092-8674(15)00549-8). The clustering method builds upon earlier graph-based techniques such as [SNN-Cliq, Xu and Su, Bioinformatics, 2015](https://academic.oup.com/bioinformatics/article/31/12/1974/214505) and CyTOF data [PhenoGraph, Levine et al., Cell, 2015](https://pubmed.ncbi.nlm.nih.gov/26095251/), where each cell is embedded in a K-nearest neighbor (KNN) graph based on similarity in their LSI space representation. Edges in the graph are weighted using Jaccard similarity, measuring the overlap between each cell’s neighborhood.
 
-To cluster the cells, we next apply modularity optimization techniques such as the Louvain algorithm (default) or [SLM, Blondel et al., 2008](https://arxiv.org/abs/0803.0476), to iteratively group cells together, with the goal of optimizing the standard modularity function. The [FindClusters()](https://satijalab.org/seurat/reference/findclusters) function implements this procedure, and contains a resolution parameter that sets the ‘granularity’ of the downstream clustering, with increased values leading to a greater number of clusters. We find that setting this parameter between 0.4-1.2 typically returns good results for single-cell datasets of around 3K cells. Optimal resolution often increases for larger datasets. The clusters can be found using the [Idents()](https://satijalab.github.io/seurat-object/reference/Idents.html) function.
+This process is implemented using the [FindNeighbors()](https://satijalab.org/seurat/reference/findneighbors) function, with the first 2–30 LSI components typically used to define the neighborhood structure. It's important to avoid using the first LSI component (LSI 1), which often captures sequencing depth rather than biological variation—use dims = 2:30 instead.
 
+To perform clustering, Signac uses modularity optimization algorithms, such as the Louvain algorithm (default) or the more refined [SLM algorithm, Blondel et al., 2008](https://arxiv.org/abs/0803.0476). This is executed via the [FindClusters()](https://satijalab.org/seurat/reference/findclusters) function. The resolution parameter controls clustering granularity:
+
+   - Lower values (e.g., 0.2–0.4) yield fewer, broader clusters
+   - Higher values (e.g., 1.0–1.4) generate more fine-grained clusters
+
+Typical resolution settings for ~3,000 cells range between 0.4 and 1.2, though this should be tuned based on dataset size and expected heterogeneity. You can inspect cluster assignments using the [Idents()](https://satijalab.github.io/seurat-object/reference/Idents.html) function.
 
 ```{r calculate-and-plot-clusters, fig.width = 12, fig.height = 6, fig.fullwidth = TRUE, echo=TRUE}
 # Remove previous clustering information
