--- a/analyses/project-updates/01-generate-project-report.Rmd
+++ b/analyses/project-updates/01-generate-project-report.Rmd
@@ -201,7 +201,7 @@ All results can be found here:
 - `r results_filepath`/`r cohort_value`/analyses/
 
 
-We used FastQC (v0.11.9) and multiqc (v1.25) to perform quality control tool for all libraries across the project from the raw sequencing reads. Next, we aligned these reads using CellRanger (v8.0.1) (10x Genomics). 
+We used FastQC (v0.11.9) and multiqc (v1.25) to perform quality control tool for all libraries across the project from the raw sequencing reads. Next, we aligned these reads using CellRanger ATAC (v2.1.0) (10x Genomics). 
 
 ## fastqc-analysis
 
