Update files to include 3 new packages

--- a/run-container/01-run-test-packages.Rmd
+++ b/run-container/01-run-test-packages.Rmd
@@ -140,6 +140,10 @@ suppressPackageStartupMessages({
   library(motifmatchr)
   ####################################################
   
+  # `motif-footprint-analysis` module
+  library(BSgenome.Mmusculus.UCSC.mm39)
+  library(chromVAR)
+  library(ggseqlogo)
 })
 ```
 
