--- a/run-container/02-run-lsf-problematic-packages.Rmd
+++ b/run-container/02-run-lsf-problematic-packages.Rmd
@@ -158,6 +158,11 @@ suppressPackageStartupMessages({
   library(biovizBase)
   library(clusterProfiler)
   ####################################################
+  
+  # `motif-footprint-analysis` module
+  library(BSgenome.Mmusculus.UCSC.mm39)
+  library(chromVAR)
+  library(ggseqlogo)
   })
 ```
 
